syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

service DiscountProtoService {
	rpc GetDiscount(GetDiscountRequest) returns (CouponModel);

	rpc GreateDiscount(GreateDiscountRequest) returns (CouponModel);
	rpc UpdateDiscount(UpdateDiscountRequest) returns (CouponModel);
	rpc DeleteDiscount(DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDiscountRequest {
	string productName = 1;
}

message GreateDiscountRequest {
	CouponModel coupon = 1;
}

message UpdateDiscountRequest {
	CouponModel coupon = 1;
}

message DeleteDiscountRequest {
	string productName = 1;
}

message GetDiscountRequest {
	int32 id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}

message DeleteDiscountResponse {
	bool success = 1;
}